--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,11 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
+    lintOptions {
+
+        checkReleaseBuilds false
+
+    }
 
     defaultConfig {
         applicationId "com.ashtech.anticovid"
