--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,18 +5,22 @@
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality.
+         location permissions for the "MyLocation" functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/anti_covid_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/anti_covid_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <receiver
+            android:name=".GeofenceBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -30,17 +34,16 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".Users.SocialTrial"
-            android:label="@string/title_activity_social_trial"></activity>
+            android:name=".Users.GeoFencing"
+            android:label="@string/title_activity_geo_fencing" />
         <activity
-            android:name=".Users.UsersMapsActivity"
-            android:label="@string/title_activity_users_maps" />
+            android:name=".Users.SocialTrial"
+            android:label="@string/title_activity_social_trial" />
         <activity
             android:name=".Users.SocialMapsActivity"
             android:label="@string/title_activity_social_maps" />
         <activity android:name=".LgnSgn.SocialLoginActivity" />
-        <activity android:name=".LgnSgn.UserLoginActivity" />
-        <activity android:name=".System.onAppkilled" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
